[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unified-mmm"
version = "0.1.0"
authors = [
  { name="Anant Chandra", email="anantc@outlook.com" }
]
description = "A unified interface for Market Mix Modeling implementations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py39']
